--- a/css/estilos.css
+++ b/css/estilos.css
@@ -54,11 +54,10 @@ box-sizing: border-box; }
 
 .section__gallery {
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-auto-rows: 280px;
+  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
   padding-top: 2rem;
   gap: 10px;
-  flex-wrap: wrap;
+  
 }
 .section__gallery-item{
   position: relative; }
